smallest changes ever omg this needs to be done

--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -4,21 +4,10 @@
 
 <div class="box blue">
             <div class="tile is-ancestor">
-                <div class="tile is-4 is-parent is-vertical box">
-                    <div class="tile is-child is-flex is-justify-content-space-around mt-2">
-            <div><img src="{{ pet.photo.url }}" class="pet-photo" alt="photo-of-{{pet.name}}" /></div></div>
-                <div class="tile is-child">
-<div class="tags" style="margin-bottom: 1rem;">
-<span class="tag tag1 is-large">{{ pet.status }}</span><span class="tag tag1 is-large">{{ pet.age_group }}</span><span class="tag tag1 is-large">{{ pet.size }}</span>
-            {% if pet.heartworm_positive or pet.health_concerns %}<span class="tag tag1 is-large">Health Issues</span>
-            {% else %}{% endif %}
-          </div>
-                </div>
-            </div>
                 <div class="tile is-8 is-parent is-vertical">
                   <div class="tile is-child box is-flex is-justify-content-space-between">
-                        <div class="about"><h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
-                            <p style="font-size:1.25rem;">{{ pet.description }}</p></div>
+                        <h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
+                            <p style="font-size:1.25rem;">{{ pet.description }}</p>
           </div>
                         <div class="tile is-child box is-flex is-justify-content-space-between" style="padding: .5rem;"><div class="level up">
                                 <p><b>Age:</b><br />{{ pet.age }}</p>
@@ -27,7 +16,19 @@
                                 <p><b>Breed:</b><br />{{ pet.breed }}</p>
                         </div>
                             </div>
-                          <a href="{% url 'application' %}"><div class="tile is-child is-flex is-justify-content-space-around box big-button">Apply to Adopt!</div></a></div></div>
+                          <a href="{% url 'application' %}"><div class="tile is-child is-flex is-justify-content-space-around box big-button">Apply to Adopt!</div></a></div>
+                          
+                          <div class="tile is-4 is-parent is-vertical box">
+                    <div class="tile is-child is-flex is-justify-content-space-around">
+            <div><img src="{{ pet.photo.url }}" class="pet-photo" alt="photo-of-{{pet.name}}" /></div></div>
+                <div class="tile is-child">
+<div class="tags" style="margin-bottom: 1rem;">
+<span class="tag tag1 is-large">{{ pet.status }}</span><span class="tag tag1 is-large">{{ pet.age_group }}</span><span class="tag tag1 is-large">{{ pet.size }}</span>
+            {% if pet.heartworm_positive or pet.health_concerns %}<span class="tag tag1 is-large">Health Issues</span>
+            {% else %}{% endif %}
+          </div>
+                </div>
+            </div></div></div>
 
 
         <div class="tile is-ancestor box">
