smallest changes ever omg this needs to be done seriously for the last time

--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -6,14 +6,14 @@
             <div class="tile is-ancestor">
                 <div class="tile is-8 is-parent is-vertical">
                   <div class="tile is-child box is-flex is-justify-content-space-between">
-                        <h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
-                            <p style="font-size:1.25rem;">{{ pet.description }}</p>
+                        <div><h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
+                            <p style="font-size:1.25rem;">{{ pet.description }}</p></div>
           </div>
                         <div class="tile is-child box is-flex is-justify-content-space-around" style="padding: .5rem;"><div class="level up">
-                                <p><b>Age:</b><br />{{ pet.age }}</p>
-                                <p><b>Weight:</b><br />{{ pet.weight }}</p>
-                                <p><b>Sex:</b><br />{{ pet.sex }}</p>
-                                <p><b>Breed:</b><br />{{ pet.breed }}</p>
+                                <p><b>Age</b><br />   {{ pet.age }}</p>
+                                <p><b>Weight</b><br />{{ pet.weight }}</p>
+                                <p><b>Sex</b><br />{{ pet.sex }}</p>
+                                <p><b>Breed</b><br />{{ pet.breed }}</p>
                         </div>
                             </div>
                           </div>
