--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -6,7 +6,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-8 is-parent is-vertical">
                   <div class="tile is-child box is-flex is-justify-content-space-between">
-                        <div><h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
+                        <div class="has-text-centered"><h2 style="font-size: 2rem;">Meet {{ pet.name }}</h2>
                             <p style="font-size:1.25rem;">{{ pet.description }}</p></div>
           </div>
                         <div class="tile is-child box is-flex is-justify-content-space-around" style="padding: .5rem;"><div class="level up">
