button had the wrong name

--- a/templates/staff/agency.html
+++ b/templates/staff/agency.html
@@ -117,7 +117,7 @@
 
 
 <div>
-  <button class="button is-info" type="submit">Submit Card</button>
+  <button class="button is-info" type="submit">Update</button>
   <a href="{% url 'home' %}">Cancel</a>
 </div>
 </form>
